test/should-fail/缺少括号-2.j
function test takes nothing returns nothing
    local integer i = (1 + (2 + 3)
endfunction